--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
         </div>
       </form>
       <div class="text-center mt-3">
-        <button class="btn btn-info">新增餐廳</button>
+        <a class="btn btn-info" href="/new">新增餐廳</a>
       </div>
     </div>
   </div>
