update and delete and search features

--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -2,6 +2,10 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
+      
+      <div class="text-end">
+        <a class="btn btn-primary" href="/">Back</a>
+      </div>
 
       <p class="mb-1">
         <span class="text-secondary">
@@ -34,8 +38,7 @@
         {{item.description}}
       </p>
 
-      <img class="rounded mx-auto d-block mb-4 w-100"
-        src="{{item.image}}" alt="布{{item.name}}"
+      <img class="rounded mx-auto d-block mb-4 w-100" src="{{item.image}}" alt="布{{item.name}}"
         style="max-width: 600px;">
     </div>
   </div>
