--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,47 +1,48 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
-      <form action="/restaurants" method="POST">
+      <form action="/restaurants/{{item._id}}/edit" method="POST">
         <fieldset>
           <legend>新增餐廳</legend>
           <div class="input-group">
             <label for="name">店名：</label>
-            <input id="name" name="name" type="text">
+            <input id="name" name="name" type="text" value="{{item.name}}">
           </div>
           <div class="input-group">
             <label for="name_en">英文名：</label>
-            <input id="name_en" name="name_en" type="text">
+            <input id="name_en" name="name_en" type="text" value="{{item.name_en}}">
           </div>
           <div class="input-group">
             <label for="category">類別：</label>
-            <input id="category" name="category" type="text">
+            <input id="category" name="category" type="text" value="{{item.category}}">
           </div>
           <div class="input-group">
             <label for="image">照片：</label>
-            <input id="image" name="image" type="text">
+            <input id="image" name="image" type="text" value="{{item.image}}">
           </div>
           <div class="input-group">
             <label for="location">地址：</label>
-            <input id="location" name="location" type="text">
+            <input id="location" name="location" type="text" value="{{item.location}}">
           </div>
           <div class="input-group">
             <label for="phone">電話：</label>
-            <input id="phone" name="phone" type="text">
+            <input id="phone" name="phone" type="text" value="{{item.phone}}">
           </div>
           <div class="input-group">
             <label for="google_map">地圖：</label>
-            <input id="google_map" name="google_map" type="text">
+            <input id="google_map" name="google_map" type="text" value="{{item.google_map}}">
           </div>
           <div class="input-group">
             <label for="rating">評分：</label>
-            <input id="rating" name="rating" type="number" step="0.1">
+            <input id="rating" name="rating" type="number" step="0.1" value="{{item.rating}}">
           </div>
           <div class="input-group">
             <label for="description">描述：</label>
-            <textarea id="description" name="description" rows="3" cols="20"></textarea>
+            <textarea id="description" name="description" rows="3" cols="20">{{item.description}}</textarea>
           </div>
+
           <div class="text-end">
-            <button class="btn btn-primary" type="submit">Add</button>
+            <button class="btn btn-primary" type="submit">Save</button>
             <a class="btn btn-primary" href="/">Back</a>
           </div>
         </fieldset>
