--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,19 +5,10 @@
       <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input
-            type="text"
-            name="keyword"
-            class="form-control"
-            placeholder="輸入餐廳、分類"
-            aria-label="Restaurant Name..."
-            value="{{keyword}}"
-            aria-describedby="search-button"
-          />
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+            value="{{keyword}}" aria-describedby="search-button" />
           <div class="input-group-append">
-            <button class="btn btn-major" type="submit" id="search-button"><i
-                class="fas fa-search"
-              ></i></button>
+            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
         </div>
       </form>
@@ -34,39 +25,32 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
         {{#each items}}
-          <div class="card mb-3 text-secondary">
-            <img
-              class="card-img-top"
-              src="{{this.image}}"
-              alt="{{this.name}}"
-            />
-            <div class="card-body p-3">
-              <h6 class="card-title mb-1">{{this.name}}</h6>
+        <div class="card mb-3 text-secondary">
+          <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}" />
+          <div class="card-body p-3">
+            <h6 class="card-title mb-1">{{this.name}}</h6>
 
-              <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i>
-                {{this.category}}
-              </div>
-
-              <span>
-                <i class="fas fa-star fa-xs"></i>{{this.rating}}
-              </span>
-
-              <div class="text-end">
-                <a class="btn btn-primary" href="">Edit</a>
-                <a
-                  class="btn btn-primary"
-                  href="/restaurants/{{this._id}}"
-                >Detail</a>
-                <form action="" method="POST" style="display: inline;">
-                  <button type="submit" class="btn btn-danger">
-                    Delete
-                  </button>
-                </form>
-              </div>
-
+            <div class="restaurant-category mb-1">
+              <i class="fas fa-utensils pr-2"></i>
+              {{this.category}}
             </div>
+
+            <span>
+              <i class="fas fa-star fa-xs"></i>{{this.rating}}
+            </span>
+
+            <div class="text-end">
+              <a class="btn btn-primary" href="/restaurants/{{this._id}}/edit">Edit</a>
+              <a class="btn btn-primary" href="/restaurants/{{this._id}}">Detail</a>
+              <form action="/restaurants/{{this._id}}/delete" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">
+                  Delete
+                </button>
+              </form>
+            </div>
+
           </div>
+        </div>
         {{/each}}
       </div>
     </div>
