--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,7 +1,7 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
-      <form action="/restaurants/{{item._id}}/edit" method="POST">
+      <form action="/restaurants/{{item._id}}?_method=PUT" method="POST">
         <fieldset>
           <legend>新增餐廳</legend>
           <div class="input-group">
