--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,9 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
+        <div class="text-center mt-3">
+          <a class="btn btn-info" href="/restaurants/new">Create</a>
+        </div>
       </div>
     </nav>
 
