--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -6,7 +6,7 @@
           <legend>新增餐廳</legend>
           <div class="input-group">
             <label for="name">店名：</label>
-            <input id="name" name="name" type="text">
+            <input id="name" name="name" type="text" required>
           </div>
           <div class="input-group">
             <label for="name_en">英文名：</label>
@@ -14,11 +14,11 @@
           </div>
           <div class="input-group">
             <label for="category">類別：</label>
-            <input id="category" name="category" type="text">
+            <input id="category" name="category" type="text" required>
           </div>
           <div class="input-group">
             <label for="image">照片：</label>
-            <input id="image" name="image" type="text">
+            <input id="image" name="image" type="text" required>
           </div>
           <div class="input-group">
             <label for="location">地址：</label>
@@ -34,7 +34,7 @@
           </div>
           <div class="input-group">
             <label for="rating">評分：</label>
-            <input id="rating" name="rating" type="number" step="0.1">
+            <input id="rating" name="rating" type="number" step="0.1" required>
           </div>
           <div class="input-group">
             <label for="description">描述：</label>
